clarified ability to undo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>999 tile!</strong></p>
+<p>Hit 'Z' to <a href="#" onclick="handle_undo()">take back one or more moves</a>.</p>
       <a class="restart-button">New Game</a>
     </div>
 
